--- a/public/private/app-assets/css-rtl/colors.css
+++ b/public/private/app-assets/css-rtl/colors.css
@@ -356,7 +356,7 @@ input:focus ~ .bg-light {
 }
 
 .alert-primary .alert-link {
-  color : #5E50EE !important;
+  color : #e54f2d !important;
 }
 
 .alert-primary .btn-close {
@@ -432,7 +432,7 @@ input:focus ~ .bg-light {
 
 .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   color : #FFFFFF;
-  background-color : #5E50EE !important;
+  background-color : #e54f2d !important;
 }
 
 .btn-primary:hover:not(.disabled):not(:disabled) {
@@ -445,7 +445,7 @@ input:focus ~ .bg-light {
 
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary {
   color : #FFFFFF;
-  background-color : #5E50EE !important;
+  background-color : #e54f2d !important;
 }
 
 .btn-flat-primary {
@@ -483,7 +483,7 @@ input:focus ~ .bg-light {
 }
 
 .btn-relief-primary:active, .btn-relief-primary.active, .btn-relief-primary:focus {
-  background-color : #5E50EE;
+  background-color : #e54f2d;
 }
 
 .btn-relief-primary:hover {
