--- a/public/private/app-assets/css/colors.css
+++ b/public/private/app-assets/css/colors.css
@@ -283,7 +283,7 @@ input:focus ~ .bg-light {
   box-shadow: rgba(115, 103, 240, 0.4) 0px 6px 15px -7px; }
 
 .alert-primary .alert-link {
-  color: #5e50ee !important; }
+  color: #e54f2d !important; }
 
 .alert-primary .btn-close {
   background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%237367f0'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/0.75rem auto no-repeat;
@@ -343,7 +343,7 @@ input:focus ~ .bg-light {
 
 .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   color: #fff;
-  background-color: #5e50ee !important; }
+  background-color: #e54f2d !important; }
 
 .btn-primary:hover:not(.disabled):not(:disabled) {
   box-shadow: 0 8px 25px -8px #fd5631; }
@@ -353,7 +353,7 @@ input:focus ~ .bg-light {
 
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary {
   color: #fff;
-  background-color: #5e50ee !important; }
+  background-color: #e54f2d !important; }
 
 .btn-flat-primary {
   background-color: transparent;
@@ -382,7 +382,7 @@ input:focus ~ .bg-light {
   background-color: #887ef2; }
 
 .btn-relief-primary:active, .btn-relief-primary.active, .btn-relief-primary:focus {
-  background-color: #5e50ee; }
+  background-color: #e54f2d; }
 
 .btn-relief-primary:hover {
   color: #fff; }
